tests/src/Loader/classloader/generics/Instantiation/Negative/param01.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_param01_param01_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param01_param01_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param01\\param01.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
